# pulp

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  lint.yml
benches/: bench.rs
pulp/: Cargo.toml  build.rs
pulp-macro/: Cargo.toml
pulp-macro/src/: lib.rs
pulp-wasm-simd-flag/: Cargo.toml
pulp-wasm-simd-flag/src/: lib.rs
pulp/benches/: bench.rs  maskload.rs
pulp/examples/: basic.rs  dot_product.rs  mask_store.rs
pulp/src/: aarch64.rs  lib.rs  wasm.rs  x86.rs
pulp/src/core_arch/: mod.rs  raw_cpuid_detect.rs
pulp/src/core_arch/aarch64/: mod.rs
pulp/src/core_arch/wasm/: mod.rs
pulp/src/core_arch/x86/: avx512dq.rs  avx512f.rs  mod.rs
pulp/src/x86/: v2.rs  v3.rs  v4.rs
src/: __aarch64.rs  __x86.rs  aarch64.rs  lib.rs  x86.rs
src/arch/: mod.rs
src/arch/x86/: avx.rs  avx2.rs  avx512bw.rs  avx512cd.rs  avx512dq.rs  avx512f.rs  avx512ifma.rs  fma.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse41.rs  sse42.rs  ssse3.rs
src/arch/x86_64/: mod.rs
src/core_arch/: mod.rs
src/core_arch/x86/: avx512cd.rs  avx512f.rs  avx512ifma.rs  mod.rs  sse.rs
src/x86/: mod.rs
