[package]
name = "pulp"
version = "0.11.5"
edition = "2021"
authors = ["sarah <>"]
description = "Safe generic simd"
readme = "README.md"
repository = "https://github.com/sarah-ek/pulp/"
license = "MIT"
keywords = ["simd"]

[dependencies]
bytemuck = "1"

[features]
default = ["std"]
std = []
nightly = ["bytemuck/nightly_stdsimd"]

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
