[package]
name = "pulp-macro"
version = "0.1.1"
edition = "2021"
authors = ["sarah <>"]
description = "Safe generic simd"
readme = "../README.md"
repository = "https://github.com/sarah-ek/pulp/"
license = "MIT"
keywords = ["simd"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }
